HelloUltraviolet/Fixtures/RejectedSource/Keys/NestedReleaseSameMode/Expected.uv
//! Expected diagnostic metadata for the NestedReleaseSameMode rejected-source specimen.

expectedDiagnostic("E-CON-0018", "rule.19.K-Release-SameMode-Err")
